Done, no red error messages, still not running!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LocalMarket</string>
+    <string name="client_id">495605471090-b0cjj9k4t841cs34uu4q9vl4hj72aafm.apps.googleusercontent.com</string>
 </resources>
